# jenn3d

./: .gitignore  CMakeLists.txt  Makefile  README.md  aligned_alloc.C  aligned_alloc.h  aligned_vect.h  animation.C  animation.h  definitions.C  definitions.h  drawing.C  drawing.h  glut_wasm.h  go_game.C  go_game.h  license.text  linalg.C  linalg.h  main.C  main.h  menus.C  menus.h  polytopes.C  polytopes.h  projection.C  projection.h  todd_coxeter.C  todd_coxeter.h  trail.C  trail.h
web/: Makefile  index.html
